--- a/index.html
+++ b/index.html
@@ -40,6 +40,35 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the quick ratio<br> 
+    What is the quick ratio?<br>
+    quick ratio is a finincial ratio that measures the short-term liquidity of a company by comparing the value of it's cash and current assets to it's short term liabilites. And sometimes it's called acid test.<br>
+    How to calculate quick ratio?<br>
+    To calculate quick ratio you should use the following formula:<br>
+    quick ratio = current assets / current liabilities<br>
+    where:<br>
+    currest assets = cash equivalents + accounts receivable<br>
+    example: company x's current assets are:<br>
+    cash = $400,000<br>
+    acounts receivable = $420,000<br>
+    inventory = $765,000<br>
+    marketable securities = $310,000<br>
+    and it's current liabilities are:<br>
+    short term debt = $212,000<br>
+    accounts payables = $530,000<br>
+    calculate the quick ratio of this company?<br>
+    using the quick ratio formula the answer will be:<br>
+    current assets = $400,000 + $420,000 + $765,000 + $310,000<br>
+    current assets = $1,895,000<br>
+    current liabilities = $212,000 + $530,000<br>
+    current liabilities = $742,000<br>
+    quick ratio = current assets / current liabilities<br>
+    quick ratio = $1,895,000 / $742,000<br>
+    quick ratio = 2.55<br>
+    Why use quick ratio?<br>
+    quick ratio is important because companies use it to know how well they will be able to pay their short term debts using only the most liquid of assets. It's also used to signals to internal management and investors if the company will run out of cash.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
